cabal-version:       >= 1.24
name:                redirect
version:             0.2.0.1
synopsis:            Shortened URL redirector
license:             GPL-2
license-file:        COPYING
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2011-2018 Operational Dynamics Consulting, Pty Ltd
category:            Web
tested-with:         GHC == 8.2

build-type:          Simple

executable           redirect

  default-language:  Haskell2010

  build-depends:     base,
                     bytestring,
                     random,
                     cryptohash,
                     hedis >= 0.4,
                     mtl,
                     lifted-base,
                     locators,
                     snap-core,
                     snap-server

  hs-source-dirs:    src

  main-is:           Redirector.hs

  other-modules:     Hashes,
                     Lookup

-- vim: set tabstop=21 expandtab:
